--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
 	"version": "0.1.0",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": ["dist/"],
+	"files": [
+		"dist/"
+	],
 	"license": "MIT",
 	"devDependencies": {
-		"bs58": "^4.0.1",
+		"@types/bn.js": "^5.1.1",
 		"@types/bs58": "^4.0.1",
 		"@types/jest": "^29.5.3",
 		"@types/node-fetch": "^2.6.4",
+		"bs58": "^4.0.1",
 		"jest": "^29.6.1",
 		"rome": "^12.0.0",
 		"ts-jest": "^29.1.1",
@@ -30,7 +33,7 @@
 	},
 	"packageManager": "yarn@3.5.1",
 	"dependencies": {
-		"solana-bankrun": "^0.1.0",
-		"@coral-xyz/anchor": "^0.28.0"
+		"@coral-xyz/anchor": "^0.28.0",
+		"solana-bankrun": "^0.1.1"
 	}
 }
