--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
 	"version": "0.1.0",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": [
-		"dist/"
-	],
+	"files": ["dist/"],
 	"license": "MIT",
 	"devDependencies": {
 		"@types/bn.js": "^5.1.1",
