--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"files": ["dist/"],
 	"license": "MIT",
 	"devDependencies": {
+		"@coral-xyz/anchor": "^0.28.0",
+		"@solana/web3.js": "^1.78.4",
 		"@types/bn.js": "^5.1.1",
 		"@types/bs58": "^4.0.1",
 		"@types/jest": "^29.5.3",
@@ -13,6 +15,7 @@
 		"bs58": "^4.0.1",
 		"jest": "^29.6.1",
 		"rome": "^12.0.0",
+		"solana-bankrun": "^0.2.0",
 		"ts-jest": "^29.1.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
@@ -30,8 +33,9 @@
 		"bumpMajor": "yarn version --no-git-tag-version --major"
 	},
 	"packageManager": "yarn@3.5.1",
-	"dependencies": {
+	"peerDependencies": {
 		"@coral-xyz/anchor": "^0.28.0",
+		"@solana/web3.js": "^1.78.4",
 		"solana-bankrun": "^0.2.0"
 	}
 }
