--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
 	"name": "anchor-bankrun",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": ["dist/"],
+	"files": [
+		"dist/"
+	],
 	"license": "MIT",
 	"devDependencies": {
 		"@coral-xyz/anchor": "^0.28.0",
