--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -14,6 +14,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - run: corepack enable
       - uses: actions/checkout@v3
       - name: Setup node
         uses: actions/setup-node@v3
