--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 18
           check-latest: true
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --pure-lockfile
       - name: Lint
         run: yarn lint
       - name: test
